--- a/app/views/shared/_navbar_light.html.erb
+++ b/app/views/shared/_navbar_light.html.erb
@@ -1,4 +1,4 @@
-<header data-controller="menu">
+<nav data-controller="menu">
   <div class="flex items-center justify-between pt-4 px-2">
 
 
@@ -27,4 +27,4 @@
   <!-- <div class="sticky">
     <%#= current_user.nil? ? (render 'shared/menu_before_login') : (render 'shared/menu_after_login') %>
   </div> -->
-</header>
+</nav>
