instagram section + footer ok

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -9,3 +9,12 @@
     }
   }
 }
+
+.instagram-media {
+  min-width: 200px !important;
+  width: 300px !important;
+  margin-top:0 !important;
+  margin-bottom: 12px !important;
+  margin-left:auto !important;
+  margin-right:auto !important;
+}
