--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,5 +28,6 @@
       <%= render "shared/navbar_mobile" unless @disable_nav %>
     <% end %>
     <%= yield %>
+    <%= render "shared/footer" %>
   </body>
 </html>
