small fix on home

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,12 +1,12 @@
-<footer class="pt-6 bg-gray-100">
-  <div class="px-2">
+<footer class="px-4 pt-6 bg-gray-100">
+  <div class="">
     <%= image_tag "Logo_footer.png", class:'rounded-full w-12 h-12' %>
   </div>
-  <div class="px-2 pt-4">
-    <h2 class="text-base text-gray-500">Je palpe cette céramique épaisse, d'une facture incontestablement tupi par son engobe blanc bordé de rouge et le fin lacis de traits noirs. <br><br>(Levi-Strauss)</h2>
+  <div class="pt-4">
+    <p class="text-base text-gray-500">"Je palpe cette céramique épaisse, d'une facture incontestablement tupi par son engobe blanc bordé de rouge et le fin lacis de traits noirs." (Levi-Strauss)</p>
   </div>
 
-  <div class="pt-8 px-2 flex space-x-6">
+  <div class="pt-8 flex space-x-6">
     <a href="https://www.facebook.com/MabciaCeramic" class="text-gray-400 hover:text-gray-500">
       <span class="sr-only">Facebook</span>
       <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
@@ -42,7 +42,7 @@
       </svg>
     </a>
   </div>
-  <div class="px-4 pt-12 grid grid-cols-2 gap-8">
+  <div class="pt-12 grid grid-cols-2 gap-8">
     <div class="md:grid md:grid-cols-2 md:gap-8">
       <div>
         <h3 class="text-sm font-semibold text-gray-400 tracking-wider uppercase">
